--- a/lambda/custom/package.json
+++ b/lambda/custom/package.json
@@ -2,10 +2,16 @@
   "name": "skill-sample-nodejs-premium-hello-world",
   "version": "1.0.0",
   "description": "In Skill Purchasing sample skill",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "author": "Amazon Alexa",
+  "license": "ISC",
   "dependencies": {
-    "ask-sdk": "^2.0.1"
+    "ask-sdk":"^2.3.0",
+    "ask-sdk-core": "^2.0.7",
+    "ask-sdk-model": "^1.4.1",
+    "aws-sdk": "^2.326.0"
   }
 }
